--- a/app/src/Pages/home.css
+++ b/app/src/Pages/home.css
@@ -42,10 +42,10 @@ img{
     }
 }
 
-.highlights {
+/* .highlights {
     height: 400px;
     width: 100%;
-}
+} */
 
 .subtitle{
     font-weight: 700;
@@ -55,4 +55,18 @@ img{
     text-align: left;
     margin: 24px;
     margin-left: 2%;
+}
+
+.categories-main{
+    width: 100%;
+    height: auto;
+    padding-left: '10%';
+    padding-right: '10%';
+    background: #E6F2F2;
+    display: flex;
+    justify-content: center;
+}
+
+.categories{
+    width: 40%;
 }
