--- a/app/src/Component/Card/card.css
+++ b/app/src/Component/Card/card.css
@@ -1,18 +1,22 @@
 .card-container{
-    margin: 24px;
-    width: 368px;
+    margin: 5%;
+    width: 350px;
     overflow: hidden;
     box-shadow: 0px 0px 15px -5px;
     transition: 0.3s;
     animation: ease-in ;
     display: inline-block;
     height: 340px;
+    border-radius: 8px;
+    /* line-height: 340px;
+    text-align: center; */
+    position: relative;
 }
 
-.card-container:hover{
+/* .card-container:hover{
     transform: scale(1.1);
     box-shadow: 0px 0px 15px 0px;
-}
+} */
 
 .image-container img{
     overflow: hidden;
@@ -35,5 +39,31 @@ h3,p{
     margin-bottom: 16px;
     font-size: 24px;
     color: #008080;
-    margin-left: 2%;
+}
+
+.card-next{
+    margin: 3%;
+    position: absolute;
+    text-align: right;
+    bottom: 0;
+}
+
+.card-button:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 0px 15px 0px;
+}
+
+@media screen and (max-width: 850px) {
+    .card-container{
+        margin: 5%;
+        width: 334px;
+        overflow: hidden;
+        box-shadow: 0px 0px 15px -5px;
+        transition: 0.3s;
+        animation: ease-in ;
+        display: inline-block;
+        height: 340px;
+        position: relative;
+        border-radius: 8px;
+    }
 }
